Cactus vets.  Fix commas in numbers.